# PinCFlow.jl

./: .JuliaFormatter.toml  .codecov.yml  .gitignore  .gitlab-ci.yml  .mailmap  .typos.toml  .zenodo.json  AUTHORS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  Makefile_2  Manifest.toml  Manifest.toml_old  NEWS.md  Project.toml  README.md  SECURITY.md  atmosphere.f90  examples.md  finish.f90  fluxes.f90  format.jl  init.f90  input.GWP_raytracer.f90  input.f90  input_backup.f90  input_monochromeWave.f90  input_wavePacket.f90  input_wavePacket_Boussinesq.f90  input_wavePacket_raytracer.f90  input_wkb.f90  l2diff.f90  makeLayout.f90  makefile  mpi.f90  muscl.f90  my_job.7231440.out  (+32 more)
.CondaPkg/: meta
PinCFlowExamples.jl/: Project.toml
bin_100/: input.f90  input.f90~
bin_12.5/: input.f90  input.f90~
bin_200/: input.f90  input.f90~
bin_25/: input.f90  input.f90~
bin_400/: input.f90  input.f90~  input_barLC.f90
bin_50/: input.f90  input.f90~
bin_50_expl/: input.f90
bin_6.25/: input.f90  input.f90~
bin_IGW1_expl/: #input.f90#  input.f90
bin_IGW1_si/: input.f90  input.f90~
bin_IGW2_expl/: input.f90  input.f90~  input_IGWcase3.f90
bin_IGW2_si/: #input.f90#  input.f90  input.f90~
bin_IGW2_si_muscl2/: input.f90
bin_IGW3_expl/: input.f90  input.f90~
bin_IGW3_si/: #input.f90#  input.f90  input.f90~
bin_atmrest_HS94/: input.f90  input.f90~
bin_atmrest_constN/: input.f90  input.f90~
bin_atmrest_isothermal/: input.f90  input.f90~
bin_barLC/: input.f90  input.f90~
bin_barLC_200km_test/: input.f90  input.f90~
bin_barLC_25km/: input.f90  input.f90~
bin_barLC_50km/: input.f90~  input_ua.f90
bin_barLC_50km_cfl0.5/: input.f90
bin_barLC_50km_nL/: input.f90  input.f90~
bin_barLC_50km_nL_expl/: input.f90  input.f90~  input_Mar2021_FS.f90
bin_barLC_50km_nL_fy/: input.f90
bin_barLC_50km_prsfac2/: input.f90
bin_barLC_50km_spongetest/: input.f90  input.f90~
bin_barLC_50km_weakersponge/: input.f90
bin_heatedLayer/: input.f90  input.f90~
bin_hotBubble+heatedLayer/: input.f90  input.f90~
bin_hotBubble3D/: input.f90  input.f90~
bin_hotBubble_125/: input.f90  input.f90~
bin_hotBubble_heat_125/: input.f90  input.f90~
bin_hotBubble_heatedLayer/: input.f90  input.f90~
bin_hotBubble_heatedLayer_GWs/: input.f90  input.f90~
bin_mountainwave/: input.f90  input.f90~
bin_mountainwave_msgwam/: input.f90  input.f90~
bin_smoothvortex/: input.f90  input.f90~
bin_smoothvortex_1024/: input.f90  input.f90~
bin_smoothvortex_128/: input.f90  input.f90~
bin_smoothvortex_256/: input.f90  input.f90~
bin_smoothvortex_384/: input.f90  input.f90~
bin_smoothvortex_512/: input.f90  input.f90~
bin_smoothvortex_64/: input.f90  input.f90~
bin_smoothvortex_768/: input.f90  input.f90~
bin_smoothvortex_96/: input.f90  input.f90~
bin_stst_100km/: input.f90  input.f90~
bin_stst_200km/: input.f90  input.f90~
bin_stst_25km/: input.f90  input.f90~  input_old.f90
bin_stst_50km/: input.f90  input.f90~  input_Feb2021_FStest.f90
bin_test/: input.f90
bin_wavePacket1D/: input.f90  input.f90~
bin_wavePacket2D/: input.f90~
bin_wavePacket2D_1280/: input.f90  input.f90~
bin_wavePacket2D_160/: input.f90  input.f90~
bin_wavePacket2D_2560/: input.f90  input.f90~
bin_wavePacket2D_320/: input.f90  input.f90~
bin_wavePacket2D_5120/: #input.f90#  input.f90  input.f90~
bin_wavePacket2D_expl/: input.f90  input.f90~
bin_wavePacket3D/: input.f90  input.f90~
cmake/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt_goethe  CMakeLists.txt_levante  Makefile  cmake_install.cmake
cmakelp/: CMakeCache.txt  Makefile  cmake_install.cmake
code/: algebra.f90  atmosphere.f90  debug.f90  finish.f90  fluxes.f90  ice.f90  ice2.f90  init.f90  optField.f90  output.f90  pinc.f90  poisson.f90  tracer.f90  types.f90  update.f90  wkb.f90
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: .gitignore  Manifest.toml  Project.toml  make.jl
examples/: Project.toml  elixir_mountainwave.jl  fast_plot.jl
exp/: fast_plot.jl  ice_mountain_2D.jl  ice_mountain_2D_2.jl  ice_mountain_test.jl  ice_mountain_wave.jl  ice_periodic_hill.jl  ice_plot.jl  ice_tjl05.jl  ice_tjl06.jl  ice_tjl08.jl  ice_wkb_mountain_2D.jl  ice_wkb_mountain_2D_2.jl  namelists_run.jl  out.out  run_everywhere.sh  wkb_mountain_wave.jl
ext/: PinCFlowPythonPlotExt.jl
format/: Project.toml  format.jl
input/: #input_nis03.f90#  input_2DWP00_GS.f90  input_2DWP90_msgwam.f90  input_2DWP90_msgwam_nf.f90  input_2DWP90_waveresolve.f90  input_2DWP90_waveresolve_backup.f90  input_2DWP_msgwam.f90  input_2DWP_msgwam_STINH.f90  input_2DWP_msgwam_STINH3.f90  input_2DWP_msgwam_STINH4.f90  input_2DWP_msgwam_STINH_nomixing.f90  input_2DWP_waveresolve.f90  input_2DWP_waveresolve_STINH.f90  input_3DWP_LES.f90  input_3DWP_msgwam.f90  input_3DWP_msgwam_cos.f90  input_3DWP_msgwam_withsmoothing.f90  input_3DWP_waveresolve.f90  input_3DWP_waveresolve_STINH.f90  input_STIH_msgwam.f90  input_STIH_waveresolve.f90  input_STINH_msgwam.f90  input_STINH_waveresolve.f90  input_agnesi.f90  input_agnesi2.f90  input_agnesi2.f90~  input_agnesi_40-80.f90  input_clark_2d.f90  input_clark_2d_bq.f90  input_clark_2d_si.f90  input_clark_2d_si_bq.f90  input_clark_3d.f90  input_clark_3d_bq.f90  input_clark_3d_si.f90  input_clark_3d_si_bq.f90  input_coldBubble.f90  input_cos.f90  input_cos.f90~  input_cos_bq.f90  input_cos_si.f90  (+83 more)
output_two_versions/: output_ncl.f90
paper/: features.mmd  features.tex  paper.bib  paper.md
src/: #init.f90#  #output.f90#  #tracer.f90#  #tracerinit.f90#  #update.f90#  .#tracer.f90  @ensemble.jl  @ivy.jl  IceRoutine.jl  Makefile  PinCFlow.jl  PinCFlow_dev.jl  README  TAGS  algebra.f90  atmosphere.f90  atmosphere.f90.0  atmosphere.jl  debug.f90  (+87 more)
(+3987 files in other folders)
